--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    It has helped me to embrace my imaginations and creativity to the public, making me confident about my-self and empowering me to do more. <br> My <b>Goal</b> is to build an <b>AI Web-based Civilization</b>
+                    It has helped me to embrace my imaginations and creativity to the public, making me confident about myself and empowering me to do more. <br> My <b>Goal</b> is to build an <b>AI Web-based Civilization</b>
                   </p>
                 </div>
 
