--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
 
         <section class="about-text">
           <p>
-            I'm an engineer from Kerala - India, who is passionate to be part of Artificial Intelligence and Web/Software Development.
-            I enjoy turning complex problems into beautiful outcomes and embrace my imaginations by my programming skills and knowledge.
+            I'm an engineer from Kerala - India, who is passionate about Artificial Intelligence and Web/Software Development.
+            I enjoy turning complex problems into beautiful outcomes and embrace my imaginations with my programming skills and knowledge.
           </p>
             
           <p>
-            I have <b>leadership</b> quality, due to my history of being a captain in my school football team. <br>
+            I have <b>leadership</b> quality, due to my history of being a captain on my school football team. <br>
             I have good <b>communication</b> skills, due to my interest in PPT presentations and speech. <br>
             I am a dedicated <b>hardworking</b> person, who doesn't stop until accomplishing a goal. <br>
             I constantly <b>acquire knowledge</b>, to sharpen my skills. <br>
